main/components/IconSection/index.styl
_gray = #dddddd
_darkGray = #636363

.root
  align-items center

.titleWrapper
  align-items center

.content
  align-items center
  margin-top 2u

  +tablet()
    flex-direction row
    flex-wrap wrap
    justify-content center
    margin-top 4u

  +wide()
    justify-content space-between
    width 100%

.section
  align-items center
  margin-top 3u

  +tablet()
    max-width 38u
    margin-left 5u
    margin-top 0

  +desktop()
    max-width 32u
    margin 0 0 0 3u
    padding 0
    justify-content space-between

  &-first
    margin-left 0
    margin-top 0

    +tablet()
      margin-left 0

    +desktop()
      margin-left 0

  &-last
    +tablet()
      margin-left 0
      margin-top 5u

    +desktop()
      margin-left 3u
      margin-top 0

.iconBorderWrapper
  padding 1u
  border 1px solid _gray
  border-radius 19u

.iconWrapper
  border-radius 19u
  border 1px solid _gray
  padding 5u

.itemTitle
  text-align center
  font-weight 200
  font-size 2.5u
  color _darkGray
  margin-top 3u

.itemText
  margin-top 2.5u

.image
  width 7u
  height 7u

  +tablet()
    width 13u
    height 13u

.dividerWrapper
  +desktop()
    margin-top 2u

.button
  margin-top 3u

  +desktop()
    margin-top 4u

